force-app/main/default/objects/Contract/fields/TipoExpDerivado__c.field-meta.xml
<CustomField>
    <fullName>TipoExpDerivado__c</fullName>
    <description>Tipologia del expediente derivado</description>
    <label>Tipo de expediente derivado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demanda independiente de cláusula suelo</fullName>
            </value>
            <value>
                <fullName>Demanda independiente de IRPH</fullName>
            </value>
            <value>
                <fullName>Demanda Independiente de Gastos Hipotecarios</fullName>
            </value>
            <value>
                <fullName>Demanda independiente de Tarjeta Revolving</fullName>
            </value>
            <value>
                <fullName>Demanda independiente de Acciones Popular</fullName>
            </value>
            <value>
                <fullName>Demanda Independiente otras situaciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>