force-app/main/default/objects/Contract/fields/TipoFijadoSuelo__c.field-meta.xml
<CustomField>
    <fullName>TipoFijadoSuelo__c</fullName>
    <description>Tipo fijado suelo</description>
    <label>Tipo fijado suelo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>