force-app/main/default/objects/Contract/fields/TipoHE__c.field-meta.xml
<CustomField>
    <fullName>TipoHE__c</fullName>
    <description>Tipo de hoja de encargo</description>
    <label>Tipo de HE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Con perito</fullName>
            </value>
            <value>
                <fullName>Sin perito</fullName>
            </value>
            <value>
                <fullName>Estándar</fullName>
            </value>
            <value>
                <fullName>Riesgo</fullName>
            </value>
            <value>
                <fullName>Persona Jurídica</fullName>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
            <value>
                <fullName>Oferta Comercial</fullName>
            </value>
            <value>
                <fullName>Asumiendo costas</fullName>
            </value>
            <value>
                <fullName>No asumiendo costas</fullName>
            </value>
            <value>
                <fullName>No consumidor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>