force-app/main/default/objects/Contract/fields/TipoLiquidacion__c.field-meta.xml
<CustomField>
    <fullName>TipoLiquidacion__c</fullName>
    <description>Tipo de liquidación</description>
    <label>Tipo liquidación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>