force-app/main/default/objects/Contract/fields/TituloHipotecario__c.field-meta.xml
<CustomField>
    <fullName>TituloHipotecario__c</fullName>
    <description>Título hipotecario</description>
    <label>Título hipotecario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>