force-app/main/default/objects/Contract/fields/UltimoEscrito__c.field-meta.xml
<CustomField>
    <fullName>UltimoEscrito__c</fullName>
    <description>Ultimo escrito presentado</description>
    <label>Ultimo escrito presentado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>