force-app/main/default/objects/Contract/fields/ValorMinimoEuribor__c.field-meta.xml
<CustomField>
    <fullName>ValorMinimoEuribor__c</fullName>
    <description>Valor mínimo Euribor</description>
    <label>Valor mínimo Euribor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>