force-app/main/default/objects/Contract/fields/ZonaOficina__c.field-meta.xml
<CustomField>
    <fullName>ZonaOficina__c</fullName>
    <description>Zona de la oficina de contratación</description>
    <formula>TEXT(OficinaContratacion__r.Zona__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Zona de la oficina de contratación</inlineHelpText>
    <label>Zona Oficina</label>
    <type>Text</type>
</CustomField>