force-app/main/default/objects/Contract/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Tipo de expediente común</description>
    <label>General</label>
</RecordType>