force-app/main/default/objects/Contract/recordTypes/Plusvalia.recordType-meta.xml
<RecordType>
    <fullName>Plusvalia</fullName>
    <active>true</active>
    <description>Para casos de plusvalía</description>
    <label>Plusvalía</label>
</RecordType>