force-app/main/default/objects/Contract/recordTypes/Popular.recordType-meta.xml
<RecordType>
    <fullName>Popular</fullName>
    <active>true</active>
    <description>Para compra de acciones del Popular/Banco Santander</description>
    <label>Popular</label>
</RecordType>