force-app/main/default/objects/Contract/recordTypes/Productos_hipotecarios.recordType-meta.xml
<RecordType>
    <fullName>Productos_hipotecarios</fullName>
    <active>true</active>
    <description>tipo de expediente para productos hipotecarios</description>
    <label>Productos hipotecarios</label>
</RecordType>