force-app/main/default/objects/Contract/recordTypes/Revolving.recordType-meta.xml
<RecordType>
    <fullName>Revolving</fullName>
    <active>true</active>
    <description>Para expedientes relacionados con tarjetas revolving</description>
    <label>Revolving</label>
</RecordType>