force-app/main/default/objects/Contract/validationRules/ControlRevocado.validationRule-meta.xml
<ValidationRule>
    <fullName>ControlRevocado</fullName>
    <active>true</active>
    <description>Antes de 15 días desde la contratación se puede revocar el expediente</description>
    <errorConditionFormula>AND (
 ISCHANGED(Status), 
 TEXT(Status) = $Label.EstadoExpteRevocado,
 (TODAY() - StartDate )&gt;45  
)</errorConditionFormula>
    <errorMessage>El expediente no puede ser revocado al haber transcurrido más de 15 días</errorMessage>
</ValidationRule>