force-app/main/default/objects/Contract/listViews/Mis_expedientes.listView-meta.xml
<ListView>
    <fullName>Mis_expedientes</fullName>
    <columns>NumeroExpedienteF__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Mine</filterScope>
    <label>Mis expedientes</label>
</ListView>