force-app/main/default/objects/Contract/listViews/Todos_los_expedientes.listView-meta.xml
<ListView>
    <fullName>Todos_los_expedientes</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>IdExpediente__c</columns>
    <columns>Producto__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>ProductoFormula__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los expedientes</label>
</ListView>